--- a/wiki/TelluriumUserGuide.wiki
+++ b/wiki/TelluriumUserGuide.wiki
@@ -1550,8 +1550,27 @@ public class ListTestCase  extends TelluriumJavaTestCase {
 
 In the package org.tellurium.test, Tellurium provides three different ways to write Tellurium tests:
 
-  * TelluriumJavaTestCase is for JUnit, and it supports the following JUnit 4 annotations: @BeforeClass, @AfterClass, @Before, @After, @Test, and @Ignore 
-  * TelluriumTestNGTestCase is for TestNG. Similarly, you can use the following annotations: @BeforeSuite, @AfterSuite, @BeforeTest, @AfterTest, @BeforeGroups, @AfterGroups, @BeforeClass, @AfterClass, @BeforeMethod, @AfterMethod, @DataProvider, @Parameters, and @Test
+  * TelluriumJavaTestCase is for JUnit, and it supports the following JUnit 4 annotations: 
+    * @BeforeClass
+    * @AfterClass 
+    * @Before 
+    * @After 
+    * @Test
+    * @Ignore 
+  * TelluriumTestNGTestCase is for TestNG. Similarly, you can use the following annotations: 
+    * @BeforeSuite
+    * @AfterSuite
+    * @BeforeTest 
+    * @AfterTest
+    * @BeforeGroups
+    * @AfterGroups
+    * @BeforeClass
+    * @AfterClass
+    * @BeforeMethod
+    * @AfterMethod
+    * @DataProvider 
+    * @Parameters
+    * @Test
   * TelluriumGroovyTestCase is for Groovy test cases.
   * Data Driven Testing. Tellurium provides the class _TelluriumDataDrivenModule_ for users to define data driven testing modules and the class _TelluriumDataDrivenTest_ to drive the actual tests.
 
