Edited wiki page through web user interface.

--- a/wiki/TelluriumReferenceManual.wiki
+++ b/wiki/TelluriumReferenceManual.wiki
@@ -4034,6 +4034,23 @@ For example, in the test case file,
     } 
 }}}
 
+== How to Debug Selenium Core in IE ==
+
+You can use Microsoft Script Debugger to debug the Selenium Core in IE.
+
+To debug the javascript code, follow the following step,
+
+  # Start custom selenium server in multiWindow mode and another useful command option is {{{-debug}}}, which will print out all trace messages
+
+{{{
+    java -jar selenium-server -multiWindow
+}}}
+
+  # Debug the Java code in IDE and set a break point somewhere in the code
+  # Once the Java process paused, open up the Microsoft script debugger or Editor MSE7.exe.
+  # Attach you debugger to the running IE instance and you will see the JavaScript you want to debug, set a break point there.
+  # Resume you Java process and it will wait there once the breakpoint is hit in the JavaScript debugger. Then you can step into, step over, or run the JavaScript. 
+
 == How to use jQuery Selector with weird characters in its ID ==
 
 You should escape the "." or other jQuery reserved characters.
